# mingw-org-wsl

./: .gitignore  .gitmodules  .hgignore  .hgtags  ChangeLog  Makefile.comm  Makefile.in  NEWS  README  TODO  VERSION.m4  config.h.in  configure.ac
include/: _mingw.h  accctrl.h  aclapi.h  aclui.h  adsprop.h  afxres.h  amaudio.h  amvideo.h  assert.h  audevcod.h  aviriff.h  aygshell.h  basetsd.h  basetyps.h  bdatypes.h  cderr.h  cguid.h  cmnquery.h  comcat.h  commctrl.h  commdlg.h  complex.h  conio.h  control.h  cpl.h  cplext.h  ctype.h  custcntl.h  dbt.h  dde.h  ddeml.h  devguid.h  dhcpcsdk.h  dir.h  direct.h  dirent.h  dlgs.h  docobj.h  dos.h  dsadmin.h  (+246 more)
include/ddk/: atm.h  batclass.h  cfg.h  cfgmgr32.h  d4drvif.h  d4iface.h  ddkmapi.h  hidclass.h  hidpi.h  hidsdi.h  hidusage.h  kbdmou.h  mcd.h  mce.h  miniport.h  minitape.h  mountdev.h  mountmgr.h  ndis.h  ndisguid.h  ndistapi.h  ndiswan.h  netevent.h  netpnp.h  newdev.h  ntapi.h  ntdd8042.h  ntddbeep.h  ntddcdrm.h  ntddcdvd.h  ntddchgr.h  ntdddisk.h  ntddk.h  ntddkbd.h  ntddmou.h  ntddndis.h  ntddpar.h  ntddpcm.h  ntddscsi.h  ntddser.h  (+40 more)
include/directx/: d3d9.h  d3d9caps.h  d3d9types.h  dxerr8.h  dxerr9.h
include/gdiplus/: gdiplus.h  gdiplusbase.h  gdiplusbrush.h  gdipluscolor.h  gdipluscolormatrix.h  gdipluseffects.h  gdiplusenums.h  gdiplusflat.h  gdiplusgpstubs.h  gdiplusgraphics.h  gdiplusheaders.h  gdiplusimageattributes.h  gdiplusimagecodec.h  gdiplusimaging.h  gdiplusimpl.h  gdiplusinit.h  gdipluslinecaps.h  gdiplusmatrix.h  gdiplusmem.h  gdiplusmetafile.h  gdiplusmetaheader.h  gdipluspath.h  gdipluspen.h  gdipluspixelformats.h  gdiplusstringformat.h  gdiplustypes.h
include/sys/: fcntl.h  file.h  locking.h  param.h  stat.h  time.h  timeb.h  types.h  unistd.h  utime.h
lib/lib32/: crypt32.def  moldname.def.in  msvcrt.def.in  oleaut32.def  ws2_32.def
mingwrt/: CONTRIBUTORS  CRT_fenv.c  CRT_fp8.c  CRT_noglob.c  CRTfmode.c  CRTglob.c  ChangeLog  Makefile.in  README  aclocal.m4  configure.ac  cpu_features.c  cpu_features.h  cpu_features.sx  crt1.c  crtmt.c  crtst.c  dllcrt1.c  dllmain.c  install-sh  main.c  msvcrt.def.in  mthr.c  mthr_init.c  ofmt_stub.s  optimizer_flags.txt  pseudo-reloc.c  readme.txt  setargv.c  txtmode.c
mingwrt/include/: _mingw.h  _mingw.h.in  complex.h  ctype.h  dir.h  direct.h  dirent.h  dlfcn.h  dos.h  errno.h  excpt.h  fenv.h  float.h  getopt.h  glob.h  io.h  libgen.h  limits.h  locale.h  math.h  msvcrtver.h  process.h  search.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h  time.h  unistd.h  wchar.h  wctype.h
mingwrt/include/parts/: strings.h  time.h  wchar.h
mingwrt/include/sys/: bsdtypes.h  stat.h  time.h  timeb.h  types.h  utime.h
mingwrt/man/: dirname.3.man  getline.3.man
mingwrt/mingwex/: Makefile.in  basename.c  clockapi.c  clockapi.h  clockres.c  clockset.c  clocktime.c  cryptnam.c  dirent.c  dirname.c  dlfcn.c  fegetexceptflag.c  feholdexcept.c  feraiseexcept.c  fesetenv.c  fesetexceptflag.c  fetestexcept.c  getopt.c  gettimeofday.c  glob.c  imaxabs.c  imaxdiv.c  jmpstub.sx  lltow.c  mbrtowc.c  mingw-fseek.c  mkdtemp.c  mkstemp.c  nsleep.c  ofmt.c  ofmtctl.c  setenv.c  sitest.c  strerror_r.c  strnlen.s  strnlen.sx  strtok_r.c  strtoumax.c  tdelete.c  testwmem.c  (+9 more)
mingwrt/mingwex/complex/: cabs_generic.c  cacos.c  cacosf.c  cacosl.c  casin.c  casin_generic.c  casinf.c  casinl.c  catan.c  catan_generic.c  catanf.c  catanl.c  ccos.c  ccosf.c  ccosh.c  ccoshf.c  ccoshl.c  ccosl.c  clog_generic.c  cpow.c  cpow_generic.c  cpowf.c  cpowl.c  csin.c  csinf.c  csinh.c  csinhf.c  csinhl.c  csinl.c  csqrt.c  csqrt_generic.c  csqrtf.c  csqrtl.c
mingwrt/mingwex/gdtoa/: misc.c
mingwrt/mingwex/math/: acosh.c  acoshf.c  acoshl.c  asinh.c  asinh_generic.c  asinhf.c  asinhl.c  atanh.c  atanhf.c  atanhl.c  cbrt.c  cbrtf.c  cbrtl.c  ceilf.s  ceill.s  cephes_mconf.h  copysign.s  copysignf.s  copysignl.s  cosf.s  coshl.c  cosl.s  erfl.c  errno.sx  exp2.s  exp2f.s  exp2l.s  expm1.c  expm1f.c  fastmath.h  floorf.S  floorf.s  floorl.S  floorl.s  fma.s  fmaf.s  fp_consts.c  fp_consts.h  fp_constsf.c  fp_constsl.c  (+75 more)
mingwrt/mingwex/stdio/: fprintf.c  fseeko64.c  getdelim.c  lseek64.c  pformat.c  pformat.h  printf.c  snprintf.c  snwprintf.c  sprintf.c  vfprintf.c  vprintf.c  vsnprintf.c  vsprintf.c
mingwrt/msvcrt-xref/: ChangeLog  Makefile.in  README.in  configure.ac  fdl-1.3.ms  msvcrt-xref.ms  msvcrt.def.in
mingwrt/profile/: Makefile.in  gmon.c  mcount.c  profil.c
mingwrt/tests/: Makefile.in  ansiprintf.at  atlocal.in  clockapi.at  headers.at  logarithms.at  powerfunc.at  testsuite.at.in
src/libgdiplus/: gdiplus.c
src/liblargeint/: largeint.c
src/libscrnsave/: scrnsave.c
src/libshell32/: shell32.c
src/libuuid/: ativscp-uuid.c  cguid-uuid.c  comcat-uuid.c  devguid.c  docobj-uuid.c  exdisp-uuid.c  extras-uuid.c  hlguids-uuid.c  hlink-uuid.c  mlang-uuid.c  mshtml-uuid.c  msxml-uuid.c  oaidl-uuid.c  objidl-uuid.c  objsafe-uuid.c  ocidl-uuid.c  oleacc-uuid.c  olectlid-uuid.c  oleidl-uuid.c  power-uuid.c  servprov-uuid.c  shobjidl-uuid.c  unknwn-uuid.c  urlmon-uuid.c
src/libws2_32/: ws2_32.c
tests/: Makefile.in  TODO
tests/colinpeters/: README
tests/headers/: directx.c  test.c
tests/libcrt/: sitest.c  test-asinh.c  test_headers.c  testwmem.c  tst-aligned-malloc.c
w32api/: ChangeLog  Makefile.in  VERSION.m4  aclocal.m4  configure.ac
w32api/include/: _winsock.h  commctrl.h  dbt.h  imagehlp.h  iptypes.h  nspapi.h  sdkddkver.h  setupapi.h  shlwapi.h  w32api.h  w32api.h.in  winbase.h  wincrypt.h  windef.h  windows.h  winerror.h  wingdi.h  winioctl.h  winnt.h  winreg.h  winsock.h  winsock2.h  winuser.h  winver.h  ws2spi.h  wsnetbs.h  wtsapi32.h
w32api/include/ddk/: ntdddisk.h  ntddk.h  ntddstor.h  ntifs.h  winddk.h
w32api/include/parts/: winioctl.h
w32api/lib/: Makefile.in  advapi32.def  kernel32.def  wtsapi32.def
w32api/lib/ddk/: Makefile.in
w32api/lib/directx/: Makefile.in
w32api/tests/: Makefile.in  headers.at  testsuite.at.in  winsock.at
wslapi/: ChangeLog  Makefile.in
wslapi/include/: obsolete.h.in  sdkddkver.h  wincrypt.h  windef.h  windows.h  winsock.h  (+3 more)
(+340 files in other folders)
